--- a/doc/strategies.tex
+++ b/doc/strategies.tex
@@ -218,8 +218,9 @@ be standardised  and  an  enumeration  continued.  The  `sims'  option
 implements  the   five   odd-numbered   non-standardising   strategies
 of~\cite{Sim94}  ({\ACE}'s  numbering  is  the  same   as   given   in
 Section~5.5 of~\cite{Sim94}). With care, it is possible  to  duplicate
-the statistics given  in~\cite{Sim94};  some  examples  are  given  in
-Appendix~"Examples".
+the    statistics    given    in~\cite{Sim94}    (see     the     note
+of~"ACEStandardCosetNumbering" or~"option  standard");  some  examples
+are given in Appendix~"Examples".
 
 \enditems
 
