--- a/doc/basics.tex
+++ b/doc/basics.tex
@@ -331,7 +331,7 @@ by  deleting  subgroup  generators  via  `ACEDeleteSubgroupGenerators'
 The default standardisation scheme for {\GAP} from {\GAP}~4.3 and  the
 standardisation    scheme    provided     by     {\ACE}     is     the
 `lenlex'{\undoquotes\atindex{lenlex standardisation scheme} {@`lenlex'
-standardisation scheme}} scheme, of Charles  Sims~\cite{Sims94}.  This
+standardisation scheme}} scheme, of  Charles  Sims~\cite{Sim94}.  This
 scheme  numbers  cosets  first  according  to  word-length  and   then
 according to a lexical ordering of coset representatives.  Each  coset
 representative  is  a  word  in  an   alphabet   consisting   of   the
@@ -477,9 +477,9 @@ main loop) performs an \lq{}action' (i.e., `lookahead',  `compaction';
 see~"option lookahead" and~"option compaction") or a block of  actions
 (i.e.,  $|`ct'|$  coset  number  definitions,  $|`rt'|$  coset  number
 applications). {\ACE} counts the number of  passes  through  the  main
-loop; if the option `loop' (see~"option loop") to a positive  integer,
-{\ACE} makes an early return when the loop count  hits  the  value  of
-`loop'.
+loop; if the option `loop' (see~"option loop") is set  to  a  positive
+integer, {\ACE} makes an early return when the  loop  count  hits  the
+value of `loop'.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%
