--- a/doc/manual.tex
+++ b/doc/manual.tex
@@ -57,8 +57,9 @@
 \Input{interact}
 \Appendices
 \Input{messages}
-\Input{otheroptions}
 \Input{examples}
+\Input{moreexamples}
+\Input{otheroptions}
 \EndMatter
 \Bibliography
 \Index
