Example demonstrating features of `ACEConjugatesForSubgroupNormalClosure' added to end of Section 6.7.

--- a/doc/ace.tex
+++ b/doc/ace.tex
@@ -813,7 +813,11 @@ but also meticulously proof-read all drafts and made  many  insightful
 comments.
 
 Many thanks also to Volkmar Felsch who, in testing  the  {\ACE}  Share
-Package, discovered a number of bugs.
+Package, discovered a number of  bugs,  made  a  number  of  important
+suggestions on code improvement, thoroughly checked all the  examples,
+and    provided    the    example    found    at    the     end     of
+Section~"Steering ACE Interactively" which demonstrates rather  nicely
+how one can use the function `ACEConjugatesForSubgroupNormalClosure'.
 
 Finally, we wish to acknowledge the contribution of Charles Sims.  The
 inclusion of the `incomplete' (see "option incomplete")  and  `lenlex'
